--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,3 +1,20 @@
+.modal {
+  width: 600px;
+  height: 350px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  background: #565ace;
+  padding: 50px 50px 10px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  align-items: center;
+}
+
 .form {
   width: 100%;
   display: flex;
