--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -1,10 +1,12 @@
 .list {
   width: 100%;
+  height: 350px;
   display: flex;
   flex-direction: column;
   gap: 24px;
   align-items: start;
   padding: 25px;
+  overflow-y: auto;
 }
 
 .list-item {
@@ -55,6 +57,14 @@
 }
 
 .delete-btn {
+  display: inline-block;
+  border: none;
+  outline: none;
+  background: inherit;
+  cursor: pointer;
+  margin-left: 5px;
+}
+.edit-btn {
   display: inline-block;
   border: none;
   outline: none;
